<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_whiteboard"
            android:icon="@drawable/ic_baseline_brush_24"
            android:title="@string/menu_whiteboard" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_video_editor"
            android:icon="@drawable/ic_baseline_video_settings_24"
            android:title="@string/menu_video_editor">
        </item>

    </group>

</menu>